# software-mfg

./: .gitignore  CLEAN_MFG.md  CONCEPT.md  CUSTOM_SERVO.md  MOBILE_BASE.md  MUJOCO_LOG.TXT  Makefile  NORTH_STAR.md  PLAN.md  PROCESS_SURVEY.md  README.md  SCANNING_SURVEY.md  WHEELS.md  cells.yaml  kiwi-plate-manual-countersink.scad  omni-roller-manual.FCStd  pyproject.toml
assemblies/: README.md
bridge/: feetech_bus.py  omni_drive.py  omni_kinematics.py  servo_read.py
calibration/: README.md  __init__.py  measure.py  store.json  store.py
featuretree/: README.md  fc_build.py  fc_common.py  fc_read.py  freecad.py  ir.py
orchestration/: README.md  assemble.py  coord_job.py  job.py  opgraph.py  toolpath.py
parts/: README.md  _acme_changer.py  _camlock.py  _coupling.py  _glue.py  _omni.py  acme_receiver.py  acme_ring.py  base_wheel.py  camlock_arm_side.py  camlock_bumper.scad  camlock_cam_ring.py  camlock_tool_side.py  coupling_arm_side.py  coupling_tool_side.py  ejector_blade.py  example_plate.py  glue_body.py  glue_feed_idler.py  glue_nozzle_bracket.py  omni_hub.py  omni_roller.py
scripts/: assemble_check.py  bend_check.py  bend_render.py  calib_check.py  calib_demo.py  camlock_check.py  cell_handoff_check.py  cell_handoff_demo.py  check_parts.py  coord_check.py  coupling_check.py  eject_check.py  eject_demo.py  feetech_protocol_check.py  freecad_gen.py  freecad_roundtrip.py  glue_check.py  glue_demo.py  interference_check.py  ir_local.py  layout_check.py  mobile_base_mj_check.py  omni_check.py  omni_drive_check.py  opgraph_check.py  opgraph_run.py  press_check.py  press_demo.py  printer_view.py  scanning_check.py  so101_check.py  so101_render.py  step_recognize.py  sync_cells.py  toolchange_check.py  toolchange_demo.py  tracking_check.py  workcell_check.py
sim/: README.md  camlock_preload_sim.py  camlock_statics.py  coupling_statics.py  feetech_protocol.py  glue_cell.py  ik.py  interference.py  lekiwi_sim.py  mobile_base_mj.py  press_cell.py  printer_cell.py  reach_plan.py  scanning.py  station.py  toolchanger.py  toolchanger_acme.py  wirebender_cell.py  workcell.py
tracking/: world.py  (+2 more)
(+1 files in other folders)
