[project]
name = "software-mfg"
version = "0.0.0"
description = "Software-defined manufacturing & assembly — a harness that builds physical harnesses."
requires-python = ">=3.12"
dependencies = [
    "build123d==0.10.0",
    "mujoco==3.9.0",
    "pyyaml>=6",       # cells.yaml manifest
    # partcad: the intended registry layer for composing parts/assemblies. Pinned
    # but not yet wired — its runtime needs an isolated py3.11 sandbox (see PLAN.md).
    # Cells are composed today via scripts/sync_cells.py instead.
    "partcad==0.7.135",
    "rich_click",      # partcad import dep, not pulled in automatically by its wheel
]

[tool.uv]
package = false
